<resources>
    <string name="app_name">Multiple Choice Game</string>
    <string name="play_title">Παίξε τώρα</string>
    <string name="about_us_nav_btn">Σχετικά</string>
    <string name="about_us">Σχετικά με την εφαρμογή</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_to_enter">Παρακαλώ εισάγετε το username σας</string>
    <string name="creator_name_title">Δημιουργός:</string>
    <string name="creator_name">Παντελιάς Γεώργιος</string>
    <string name="creator_AM_title">Αριθμός Μητρώου:</string>
    <string name="creator_AM">mscict23047</string>

    <string name="start_game">Eναρξη</string>
    <string name="οκLabel">ΟΚ</string>
    <string name="closeLabel">ΚΛΕΙΣΕ</string>
    <string name="padaquiz">PADAQuiz</string>
    <string name="resultsTitle">Αποτελέσματα</string>
    <string name="congrats">Συγχαρητήρια!</string>
    <string name="welcome">Καλωσήρθατε!</string>
    <string name="pointsTitle">Πόντοι</string>
    <string name="scoreValue">8</string>
    <string name="username">username</string>
    <string name="submit_label">ΥΠΟΒΟΛΗ</string>
    <string name="finish_label">ΤΕΛΟΣ</string>
</resources>